[metadata]
name = libmonty-hexdump
version = attr: libmonty_hexdump.version.__version__
url = https://codeberg.org/sunarch/libmonty-hexdump
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/libmonty-hexdump/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: System
    Topic :: Text Processing :: General
    Topic :: Utilities
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = libmonty-hexdump - Python library - hexdump utility
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty, hexdump
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.10
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    libmonty-hexdump = libmonty_hexdump.__main__:main

[options.packages.find]
where = src
